# url-mangler

./: .coveragerc  .uwsgi_params  README.md  manage.py  pyproject.toml  pytest.ini  uwsgi_config.ini
.github/workflows/: python-app.yml
url_mangler/apps/url_mapper/: admin.py  apps.py  forms.py  models.py  urls.py  uses.py  views.py
url_mangler/apps/url_mapper/migrations/: 0001_initial.py
url_mangler/apps/url_mapper/static/url_mapper/css/: url_mapper.css
url_mangler/apps/url_mapper/static/url_mapper/js/: url_mapper.js
url_mangler/apps/url_mapper/templates/url_mapper/: url_mapping_form.html
url_mangler/apps/url_mapper/tests/: test_forms.py  test_models.py  test_uses.py  test_views.py
url_mangler/settings/: asgi.py  settings.py  urls.py  wsgi.py
url_mangler/settings/.confidential/: ci.json  defaults.json
url_mangler/static/: base.css
url_mangler/templates/: base.html
