[tool.poetry]
name = "url-mangler"
version = "0.1.0"
description = "url shortener of sorts"
authors = ["Russell Martin <rmartin16@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.2"
confidential = "^2.3.1"
psycopg2 = "^2.8.6"
django-extensions = "^3.0.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
Werkzeug = "^1.0.1"
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
